# Evolution-Simulation

./: .gitignore  Cargo.toml  index.html
enum_variant_counter/: Cargo.toml
enum_variant_counter/src/: lib.rs
site/: main.js  main.js.map  main.ts  tsconfig.json
src/: cell.rs  cell_type.rs  color.rs  command.rs  direction.rs  entity.rs  entity_action.rs  entity_context.rs  entity_egg.rs  genetic_code.rs  lib.rs  operation.rs  tests.rs  world.rs
src/tests/: enum_counter_test.rs  genetic_code_tests.rs
