[package]
name = "simulation-wasm"
version = "0.1.0"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"

# For the web assembly itself
wasm-bindgen = "0.2"

# For the use of enums...
num-traits = "0.2.14"
num-derive = "0.3.3"