[package]
name = "simulation-wasm"
version = "0.0.1"
description = "Evolution simulation WASM-module (for later visualization in browser)"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

# Random
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# For the web assembly itself
wasm-bindgen = "0.2"

# For the use of enums
num-traits = "0.2"
num-derive = "0.3"

# For procedural macros
syn = "1.0"
quote = "1.0"

enum_variant_counter = {path = "./enum_variant_counter"}